# blog_api_rust

./: Cargo.toml  docker-compose.yaml
migrations/: 20230806195706_init.down.sql  20230806195706_init.up.sql
src/: config.rs  main.rs  state.rs
src/posts/: .handler.rs.rustfmt  handler.rs  model.rs  router.rs
src/user/: handler.rs  middleware.rs  mod.rs  model.rs  router.rs
