[package]
name = "blog_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = "0.6.11"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.70"

sqlx = { version = "0.7.1",  features = ["postgres", "runtime-tokio-native-tls","chrono"] }

uuid = { version = "1.3.0", features = ["serde", "v4"] }

jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }

dotenv = "0.15.0"
